2001-07-22  Mark Kettenis  <kettenis@gnu.org>

	* i386gnu-nat.c: Include "i387-nat.h".
	(struct env387): Removed.
	(reg_offset): Fix comment.
	(fetch_fpregs): Use FCTRL_REGNUM and FOP_REGNUM instead of
	FIRST_FPU_CONTROL_REGNUM and LAST_FPU_CONTROL_REGNUM.  Rewrite to
	use i387_supply_fsave.
	(gnu_fetch_registers): Remove spurious whitespace.
	(convert_to_env387): Remove.
	(store_fpregs): Add argument regno.  Use i387_fill_fsave instead
	of convert_to_env387.
	(gnu_store_registers): Remove spurious whitespace.  Pass REGNO to
	store_fpregs.
	* config/i386/i386gnu.mt (TDEPFILES): Add i387-tdep.o.
	* config/i386/i386gnu.mh (XDEPFILES): Remove i387-tdep.o.
	(NATDEPFILES): Add i387-nat.o.

2001-07-22  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* Makefile.in (ALLDEPFILES): Add m68hc11-tdep.c.
	(m68hc11-tdep.o): Define dependencies.

2001-07-22  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* m68hc11-tdep.c (m68hc11_gdbarch_init): Define int at 16-bits.

2001-07-21  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* utils.c (init_page_info): Use tui_get_command_dimension.
	* printcmd.c (disassemble_command): Simplify tui specific code,
	use tui_is_window_visible, tui_show_assembly.

2001-07-21  Mark Kettenis  <kettenis@gnu.org>

	* i386bsd-nat.c: Do not include <sys/sysctl.h>.
	(_initialize_i386bsd_nat) [KERN_PS_STRINGS]: Move FreeBSD-specific
	code to ...
	* i386fbsd-nat.c: ... here.  New file.
	* config/i386/fbsd.mh (NATDEPFILES): Add i386-fbsd.o.
	* config/i386/nm-fbsd.h (CHILD_RESUME): Define.
	* Makefile.in (ALLDEPFILES): Add i386fbsd-nat.c.
	(i386fbsd-nat.o): Add dependencies.
	
2001-07-19  Daniel Jacobowitz  <drow@mvista.com>

	* signals.c: New file.
	* Makefile.in: Add signals.o.
	* target.c (struct signals, target_signal_to_name)
	(target_signal_from_name, target_signal_from_host)
	(do_target_signal_to_host, target_signal_to_host_p)
	(target_signal_to_host, target_signal_from_command): Move to
	signals.c.