@@ -1,3 +1,8 @@
+2001-07-23  Eli Zaretskii  <eliz@is.elta.co.il>
+
+	* gdb.tex (DJGPP Native): New node, with descriptions of
+	DJGPP-specific commands.
+
 2001-07-19  John R. Moore  <jmoore@redhat.com>
 
 	* gdbint.texinfo: Three misspellings.
